# tx-extension-clip

./: Dockerfile  README.md  pyproject.toml  setup.py
tests/: README.md  test_distance.py  test_hasher.py  test_index.py  test_manifest.py  test_matcher.py  test_signal.py  test_utils.py
tx-extension-clip-0.2.5/: setup.py
tx-extension-clip-0.2.5/tx_extension_clip/: hasher.py
tx-extension-clip-0.2.5/tx_extension_clip.egg-info/: requires.txt
tx_extension_clip/: __init__.py  config.py  hasher.py  index.py  matcher.py  signal.py
tx_extension_clip.egg-info/: requires.txt
tx_extension_clip/utils/: distance.py  logging.py
