[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

# This [project] table is required by setuptools when [tool.setuptools] is used.
[project]
name = "tx-extension-clip"
version = "0.2.5"

[tool.setuptools.env]
# This sets the PYTHONPATH to fix the "module not found" error in Docker
"PYTHONPATH" = "{project_root}"